apps/weewx/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: weewx
  namespace: weewx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: weewx
  egress:
    - toCIDR:
        - 192.168.254.11/32
      toPorts:
      - ports:
          - port: "1883"
            protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/instance: pushgateway
